--- a/index.html
+++ b/index.html
@@ -4,9 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="js/main.js">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>MYEL</title>
 </head>
 <body>
-    привееееееееееееееет
+    <header>
+        <div class="head__top">
+            <p>Free shipping on orders over $150 over Canada</p>
+        </div>
+        <div class="head__bottom">
+            <div class="menu">
+                <li>Shop by</li>
+                <li>Collections</li>
+                <li class="logo"><img src="img/logo.png" alt=""></li>
+                <li>About us</li>
+                <li>Login</li>
+                <div class="language">
+                    <bottom class="fr">Fr</bottom> |
+                    <bottom class="En">En</bottom>
+                </div>
+                <div class="cart">0</div>
+            </div>
+            
+        </div>
+    </header>
+    <main>
+        <section class="shop__all">
+           <h2>SHOP ALL</h2> 
+        </section>
+        <section class="show__myel">
+            <h2>SHOW MYEL</h2>
+            <p class="text">Responsible high-end jewelry made in Montreal. 
+                MYEL creations are designed to stand the test of time.
+            </p>
+            <p  class="prscr">
+                Spontaneous, delicate, audacious, 
+                our jewels distinguish themselves with their elegance.
+            </p>
+        </section>
+        <section class="show__new__arrivals">
+            <h2>SHOP NEW ARRIVALS</h2>
+            <div class="slider">
+                <div class="product__left">
+                    <p>Stein Necklace in Silver with Aquamarine</p>
+                    <img src="img/product-left.png" alt="">
+                    <div class="info">
+                        <div class="price">$310 CAD</div>
+                        <div class="show__now"><button>Shop now</button></div>
+                    </div>
+                </div>
+                <div class="center__slider">
+                    <img src="img/center-slider.png" alt="">
+                </div>
+                <div class="product__right">
+                    <p>Origines Pendant in Yellow Gold with Ethical Birthstone</p>
+                    <img src="img/product-right.png" alt="">
+                    <div class="info">
+                        <div class="price">$280 CAD</div>
+                        <div class="show__now"><button>Shop now</button></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
