--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="js/main.js">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    
     <title>MYEL</title>
 </head>
 <body>
@@ -46,28 +50,56 @@
         </section>
         <section class="show__new__arrivals">
             <h2>SHOP NEW ARRIVALS</h2>
-            <div class="slider">
-                <div class="product__left">
-                    <p>Stein Necklace in Silver with Aquamarine</p>
-                    <img src="img/product-left.png" alt="">
-                    <div class="info">
-                        <div class="price">$310 CAD</div>
-                        <div class="show__now"><button>Shop now</button></div>
+            <div class="owl-carousel" id="slider">
+                <div class="slide">
+                    <div class="product__left">
+                        <p>Stein Necklace in Silver with Aquamarine</p>
+                        <img src="img/product-left.png" alt="">
+                        <div class="info">
+                            <div class="price">$310 CAD</div>
+                            <div class="show__now"><button>Shop now</button></div>
+                        </div>
+                    </div>
+                    <div class="center__slider">
+                        <img src="img/center-slider.png" alt="">
+                    </div>
+                    <div class="product__right">
+                        <p>Origines Pendant in Yellow Gold with Ethical Birthstone</p>
+                        <img src="img/product-right.png" alt="">
+                        <div class="info">
+                            <div class="price">$280 CAD</div>
+                            <div class="show__now"><button class="btn__product" type="submit">Shop now</button></div>
+                        </div>
                     </div>
                 </div>
-                <div class="center__slider">
-                    <img src="img/center-slider.png" alt="">
-                </div>
-                <div class="product__right">
-                    <p>Origines Pendant in Yellow Gold with Ethical Birthstone</p>
-                    <img src="img/product-right.png" alt="">
-                    <div class="info">
-                        <div class="price">$280 CAD</div>
-                        <div class="show__now"><button>Shop now</button></div>
+                <div class="slide">
+                    <div class="product__left">
+                        <p>Stein Necklace in Silver with Aquamarine</p>
+                        <img src="img/product-left.png" alt="">
+                        <div class="info">
+                            <div class="price">$310 CAD</div>
+                            <div class="show__now"><button>Shop now</button></div>
+                        </div>
+                    </div>
+                    <div class="center__slider">
+                        <img src="img/center-slider.png" alt="">
+                    </div>
+                    <div class="product__right">
+                        <p>Origines Pendant in Yellow Gold with Ethical Birthstone</p>
+                        <img src="img/product-right.png" alt="">
+                        <div class="info">
+                            <div class="price">$280 CAD</div>
+                            <div class="show__now"><button class="btn__product" type="submit">Shop now</button></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/main.js"></script>
+    
 </body>
 </html>
