Add your commit

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <img src="img/product-left.png" alt="">
                         <div class="info">
                             <div class="price">$310 CAD</div>
-                            <div class="show__now"><button>Shop now</button></div>
+                            <div class="show__now"><button class="btn__product" type="submit">Shop now</button></div>
                         </div>
                     </div>
                     <div class="center__slider">
@@ -78,7 +78,7 @@
                         <img src="img/product-left.png" alt="">
                         <div class="info">
                             <div class="price">$310 CAD</div>
-                            <div class="show__now"><button>Shop now</button></div>
+                            <div class="show__now"><button class="btn__product" type="submit">Shop now</button></div>
                         </div>
                     </div>
                     <div class="center__slider">
@@ -95,6 +95,30 @@
                 </div>
             </div>
         </section>
+        <section class="bonne__mine">
+            <div class="bonne__mine-left"></div>
+            <div class="bonne__mine-right"></div>
+        </section> 
+        <section class="browse__by__categories">
+            <h2>Browse by categories</h2>
+            <div class="browse__by__categories-photo">
+                <!-- <div class="slide">
+                    <img src="img/slide1.jpg" alt="">
+                    <img src="img/slide1.jpg" alt="">
+                    <img src="img/slide1.jpg" alt="">
+                    <img src="img/slide1.jpg" alt="">
+                    <img src="img/slide1.jpg" alt="">
+                    <img src="img/slide1.jpg" alt="">
+                </div> -->
+                <div class="slide"><img src="img/slide2.jpg" alt=""></div>
+                <div class="slide"><img src="img/slide3.jpg" alt=""></div>
+                <div class="slide"><img src="img/slide2.jpg" alt=""></div>
+                <div class="slide"><img src="img/slide1.jpg" alt=""></div>
+                <div class="slide"><img src="img/slide2.jpg" alt=""></div>
+                <div class="slide"><img src="img/slide3.jpg" alt=""></div>
+                <div class="slide"><img src="img/slide2.jpg" alt=""></div>
+            </div>
+        </section>   
     </main>
 
     <script src="js/jquery.min.js"></script>
