--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
         <section class="show__new__arrivals">
             <h2>SHOP NEW ARRIVALS</h2>
-            <div class="owl-carousel" id="slider">
+            <div class="owl-carousel slide-one" id="slider">
                 <div class="slide">
                     <div class="product__left">
                         <p>Stein Necklace in Silver with Aquamarine</p>
@@ -101,15 +101,7 @@
         </section> 
         <section class="browse__by__categories">
             <h2>Browse by categories</h2>
-            <div class="browse__by__categories-photo">
-                <!-- <div class="slide">
-                    <img src="img/slide1.jpg" alt="">
-                    <img src="img/slide1.jpg" alt="">
-                    <img src="img/slide1.jpg" alt="">
-                    <img src="img/slide1.jpg" alt="">
-                    <img src="img/slide1.jpg" alt="">
-                    <img src="img/slide1.jpg" alt="">
-                </div> -->
+            <div class="owl-carousel slide-two">
                 <div class="slide"><img src="img/slide2.jpg" alt=""></div>
                 <div class="slide"><img src="img/slide3.jpg" alt=""></div>
                 <div class="slide"><img src="img/slide2.jpg" alt=""></div>
@@ -118,7 +110,16 @@
                 <div class="slide"><img src="img/slide3.jpg" alt=""></div>
                 <div class="slide"><img src="img/slide2.jpg" alt=""></div>
             </div>
-        </section>   
+        </section>  
+        <section class="one-of-a-kind-books">
+            <div class="books__left"></div>
+            <div class="books__right"></div>
+        </section>
+        <section class="together">
+            <p>Together, we can build a brighter tomorrow. 
+                We use ethical stones and the most eco-responsible raw material possible.
+            </p> 
+        </section> 
     </main>
 
     <script src="js/jquery.min.js"></script>
