--- a/index.html
+++ b/index.html
@@ -118,8 +118,115 @@
         <section class="together">
             <p>Together, we can build a brighter tomorrow. 
                 We use ethical stones and the most eco-responsible raw material possible.
-            </p> 
+            </p>
+            <div class="together__item">
+                <div class="item">
+                    <img src="img/1.png" alt="">
+                    <p class="num">01</p>
+                    <div class="descr">
+                        Our jewelry is designed and produced locally in Montreal.
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/2.png" alt="">
+                    <p class="num">02</p>
+                    <div class="descr">
+                        MYEL is a member of the Ethical Metalsmith Association.
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/3.png" alt="">
+                    <p class="num">03</p>
+                    <div class="descr">
+                        We create high end jewelry, designed to stand the test of time.
+                    </div>
+                </div>
+                
+            </div> 
+            <a href="#">LEARN MORE</a> 
         </section> 
+        <section class="fairmined__gold">
+            <div class="fairmined__gold__left"></div>
+            <div class="fairmined__gold__right">
+                <h2>Fairmined Gold: choose ethical gold</h2>
+                <div class="descr">
+                    Shop Fairmined Gold
+                </div>
+            </div>
+        </section>
+        <section class="banner">
+            <div class="baner__menu">
+                <p>Exceptional Quality</p>
+                <p>Fair Price</p>
+                <p>Made in Montreal</p>
+            </div>
+            </div>
+            <div class="title">Subscribe to our newsletter.</div>
+            <div class="descr">Receive exclusive news and special promo codes.
+            <a href="#"><img src="img/arrow_right.png" alt=""></a>
+        </section>
+    <footer class="footer">
+        <div class="footer__menu__left">
+            <div class="shop__by">
+                <p class="title">Shop By</p>
+                <div class="first__menu">
+                    <ul>
+                        <li><a href="#">Necklaces</a></li>
+                        <li><a href="#">Earrings</a></li>
+                        <li><a href="#">Best Sellers</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">Rings</a></li>
+                        <li><a href="#">Bracelets</a></li>
+                        <li><a href="#">New Arrivals</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__left__bottom">
+                <div class="social">
+                    <p>Social</p>
+                    <div class="social__icon">
+                        <img src="img/facebook.png" alt="">
+                        <img src="img/instagram.png" alt="">
+                    </div>
+                </div>
+                <div class="language">
+                    <bottom class="fr">Fr</bottom> |
+                    <bottom class="En">En</bottom>
+                </div>
+            </div>
+        </div>
+        <div class="footer__menu__right">
+            <div class="support">
+                <p>Support</p>
+                <ul>
+                    <li><a href="#">Product care</a></li>
+                    <li><a href="#">Returns, shipping <br>& pricing</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+            </div>
+            <div class="myel">
+                <p>MYEL</p>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Journal</a></li>
+                    <li><a href="#">Ethical stones</a></li>
+                    <li><a href="#">Terms & privacy</a></li>
+                </ul>
+            </div>  
+            <div class="visit">
+                <p>Visit</p>
+                <ul>
+                    <li><a href="#">The Store</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="powered__by">
+            <p>All rights reserved. © 2021 - MYEL</p>
+            <p>Web Credits</p>
+        </div>
+    </footer>
     </main>
 
     <script src="js/jquery.min.js"></script>
