--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         </div>
         <div class="head__bottom">
             <div class="menu">
-                <li>Shop by</li>
-                <li>Collections</li>
-                <li class="logo"><img src="img/logo.png" alt=""></li>
-                <li>About us</li>
-                <li>Login</li>
+                <li><a href="#">Shop by</a></li>
+                <li><a href="#">Collections</a></li>
+                <li class="logo"><a href="#"><img src="img/logo.png" alt=""></a></li>
+                <li><a href="#">About us</a></li>
+                <li class="login"><a href="#">Login</a></li>
                 <div class="language">
                     <bottom class="fr">Fr</bottom> |
-                    <bottom class="En">En</bottom>
+                    <bottom class="En active">En</bottom>
                 </div>
                 <div class="cart">0</div>
             </div>
@@ -192,7 +192,7 @@
                 </div>
                 <div class="language">
                     <bottom class="fr">Fr</bottom> |
-                    <bottom class="En">En</bottom>
+                    <bottom class="En active">En</bottom>
                 </div>
             </div>
         </div>
