--- a/index.html
+++ b/index.html
@@ -24,10 +24,20 @@
                 <li><a href="#">Collections</a></li>
                 <li class="logo"><a href="#"><img src="img/logo.png" alt=""></a></li>
                 <li><a href="#">About us</a></li>
-                <li class="login"><a href="#">Login</a></li>
+                <li class="modal-button"><a href="#">Login</a></li>
+                <div id="modal__container" class="modal__container">
+                    <div class="modal">
+                        <h2>Авторизация</h2>
+                        <form action="#">
+                            <input type="text" placeholder="Login">
+                            <input type="password" placeholder="Password">
+                            <input type="submit">
+                        </form>
+                    </div>
+                </div>
                 <div class="language">
-                    <bottom class="fr">Fr</bottom> |
-                    <bottom class="En active">En</bottom>
+                    <a href="#" class="fr">Fr</a> |
+                    <a href="#" class="En active">En</a>
                 </div>
                 <div class="cart">0</div>
             </div>
@@ -186,13 +196,13 @@
                 <div class="social">
                     <p>Social</p>
                     <div class="social__icon">
-                        <img src="img/facebook.png" alt="">
-                        <img src="img/instagram.png" alt="">
+                        <a href="#"><img src="img/facebook.png" alt=""></a>
+                        <a href="#"><img src="img/instagram.png" alt=""></a>
                     </div>
                 </div>
                 <div class="language">
-                    <bottom class="fr">Fr</bottom> |
-                    <bottom class="En active">En</bottom>
+                    <a href="#" class="fr">Fr</a> |
+                    <a href="#" class="En active">En</a>
                 </div>
             </div>
         </div>
